--- a/Projeto-2/index.html
+++ b/Projeto-2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./script.js"></script>
+
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -18,8 +18,9 @@
         <div class="circle">4</div>
       </div>
 
-      <button class="btn" id="prev" disabled>Prev</button>
+      <button class="btn" id="prev">Prev</button>
       <button class="btn" id="next">Next</button>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
