Adding CSS to the Event Keycodes project

--- a/Projeto11-Event-Keycodes/index.html
+++ b/Projeto11-Event-Keycodes/index.html
@@ -10,15 +10,16 @@
   <body>
     <div id="insert">
       <div class="key">
-        <small></small>
+        a
+        <small>event.key</small>
       </div>
       <div class="key">
         65
-        <small></small>
+        <small>event.Code</small>
       </div>
       <div class="key">
         KeyA
-        <small></small>
+        <small>event.code</small>
       </div>
       <div class="key">Press any key to get keyCode</div>
     </div>
