--- a/Projeto17-Movie-App/index.html
+++ b/Projeto17-Movie-App/index.html
@@ -14,49 +14,7 @@
       </form>
     </header>
 
-    <main id="main">
-      <div class="movie">
-        <img src="./img.png" alt="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sequi
-          doloremque neque dolor. Ad itaque ab optio, quas, cumque inventore nam
-          expedita iusto facilis mollitia ullam modi sequi doloribus. Officia!
-        </div>
-      </div>
-
-      <div class="movie">
-        <img src="./img.png" alt="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sequi
-          doloremque neque dolor. Ad itaque ab optio, quas, cumque inventore nam
-          expedita iusto facilis mollitia ullam modi sequi doloribus. Officia!
-        </div>
-      </div>
-
-      <div class="movie">
-        <img src="./img.png" alt="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="red">3.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sequi
-          doloremque neque dolor. Ad itaque ab optio, quas, cumque inventore nam
-          expedita iusto facilis mollitia ullam modi sequi doloribus. Officia!
-        </div>
-      </div>
-    </main>
+    <main id="main"></main>
 
     <script src="./script.js"></script>
   </body>
