--- a/Projeto18- Background-Slider/index.html
+++ b/Projeto18- Background-Slider/index.html
@@ -16,47 +16,47 @@
   <body>
     <div class="slider-container">
       <div
-        class="slide active"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1536152470836-b943b246224c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Nnx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60');
-        "
-      ></div>
+      class="slide active"
+      style="
+        background-image: url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80');
+      "
+    ></div>
+    <div
+      class="slide"
+      style="
+        background-image: url('https://images.unsplash.com/photo-1511593358241-7eea1f3c84e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1934&q=80');
+      "
+    ></div>
 
-      <div
-        class="slide"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1511593358241-7eea1f3c84e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1934&q=80');
-        "
-      ></div>
+    <div
+      class="slide"
+      style="
+        background-image: url('https://images.unsplash.com/photo-1495467033336-2effd8753d51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80');
+      "
+    ></div>
 
-      <div
-        class="slide"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1495467033336-2effd8753d51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80');
-        "
-      ></div>
+    <div
+      class="slide"
+      style="
+        background-image: url('https://images.unsplash.com/photo-1522735338363-cc7313be0ae0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80');
+      "
+    ></div>
 
-      <div
-        class="slide"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1522735338363-cc7313be0ae0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2689&q=80');
-        "
-      ></div>
+    <div
+      class="slide"
+      style="
+        background-image: url('https://images.unsplash.com/photo-1559087867-ce4c91325525?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80');
+      "
+    ></div>
 
-      <div
-        class="slide"
-        style="
-          background-image: url('https://images.unsplash.com/photo-1559087867-ce4c91325525?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80');
-        "
-      ></div>
+    <button class="arrow left-arrow" id="left">
+      <i class="fas fa-arrow-left"></i>
+    </button>
 
-      <button class="arrow left-arrow" id="left">
-        <i class="fas fa-arrow-left"></i>
-      </button>
-
-      <button class="arrow right-arrow" id="right">
-        <i class="fas fa-arrow-right"></i>
-      </button>
+    <button class="arrow right-arrow" id="right">
+      <i class="fas fa-arrow-right"></i>
+    </button>
+  </div>
     </div>
 
     <script src="./script.js"></script>
