Vertical Slider UI

--- a/Projeto26-Vertical-Slider-UI/index.html
+++ b/Projeto26-Vertical-Slider-UI/index.html
@@ -16,7 +16,7 @@
       <div class="left-slide">
         <div style="background-color: #fd3555">
           <h1>Nature Flower</h1>
-          <p>all in pink</p>
+          <p>All in pink</p>
         </div>
         <div style="background-color: #2a86ba">
           <h1>Bluuue Sky</h1>
@@ -57,7 +57,7 @@
         <button class="down-button">
           <i class="fas fa-arrow-down"></i>
         </button>
-        <button class="down-button">
+        <button class="up-button">
           <i class="fas fa-arrow-up"></i>
         </button>
       </div>
