--- a/Projeto26-Vertical-Slider-UI/index.html
+++ b/Projeto26-Vertical-Slider-UI/index.html
@@ -2,33 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>Vertical Slider</title>
-    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div class="slider-container">
       <div class="left-slide">
         <div style="background-color: #fd3555">
-          <h1>Nature Flower</h1>
-          <p>All in pink</p>
+          <h1>Nature flower</h1>
+          <p>all in pink</p>
         </div>
         <div style="background-color: #2a86ba">
           <h1>Bluuue Sky</h1>
-          <p>With it's mountains</p>
+          <p>with it's mountains</p>
         </div>
         <div style="background-color: #252e33">
-          <h1>Lonely Castle</h1>
-          <p>In the wilderness</p>
+          <h1>Lonely castle</h1>
+          <p>in the wilderness</p>
         </div>
         <div style="background-color: #ffb866">
           <h1>Flying eagle</h1>
-          <p>In the sunset</p>
+          <p>in the sunset</p>
         </div>
       </div>
       <div class="right-slide">
@@ -63,6 +62,6 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
