--- a/Projeto33-Notes-App/index.html
+++ b/Projeto33-Notes-App/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
@@ -10,26 +9,13 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>Notes App</title>
-    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <button class="add" id="add"><i class="fas fa-plus"></i> Add note</button>
 
-    <div class="note">
-      <div class="tools">
-        <button class="edit"><i class="fas fa-edit"></i></button>
-        <button class="delete"><i class="fas fa-trash-alt"></i></button>
-      </div>
-      <textarea name="" id="" cols="20" rows="1"></textarea>
-    </div>
-
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.2.3/marked.min.js"
-      integrity="sha512-4ukXheW2Wp+ssxjnlMzgwJMQdcDv0GJ1TYvetNY9YdIeBXYuj9cgRmlRaV/YoedPasJkJrgZ9UX+H5Jt4te9Hw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="./script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/1.2.2/marked.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
