--- a/Projeto36-Hoverboard/index.html
+++ b/Projeto36-Hoverboard/index.html
@@ -8,20 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="container" id="container">
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-    </div>
+    <div class="container" id="container"></div>
 
     <script src="./script.js"></script>
   </body>
